--- a/menu/templates/list.html
+++ b/menu/templates/list.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+
 {% block content %}
+{% load static %}
+
  <div class="container card-group">
     {% for product in products %}
   <div style="background-color: #f5ebdc; border: none";   class="card">
@@ -8,10 +11,13 @@
       <h5 class="card-title">
           <a href="{% url 'detail' product.id %}">{{product.name}}</a>
       </h5>
-      <p class="card-text">{{ product.kkal }} kkal</p>
+      <p class="card-text">{{ product.price }}$</p>
+      <a href="{% url 'cart_add' product.id %}">
+      <img style="width: 60px; height: auto;" src="{% static 'shopping-cart.png' %}">
+      </a>
 
     </div>
-
+  </div>
     {% endfor %}
-      </div>
-{% endblock %}
+ </div>
+    {% endblock %}
