--- a/menu/templates/detail.html
+++ b/menu/templates/detail.html
@@ -16,12 +16,14 @@
         <div class="burger_detail">
                 <img src="{{ product.image.url }}">
                 <h4>{{ product.name }}</h4>
-                <p>{{ product.cal }} Cal.</p>
+                <p>{{ product.kkal }} kkal.</p>
                 {% if product.status == 'in stock' %}
                 <p style="color: green;">В наличии</p>
                 {% else %}
                 <p style="color: red;">Нет в наличии</p>
                 {% endif %}
+                <a class="btn btn-warning" href="{% url 'update' product.id %}" role="button">Update</a>
+                <a class="btn btn-danger" href="{% url 'delete' product.id %}" role="button">Delete</a>
         </div>
 
 {% endblock %}
