--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,14 @@
   <div class="container-fluid">
     <a href="{% url 'index' %}" class="navbar-brand">Menu</a>
 
+      {% if not request.user.is_authenticated %}
+    <a href="{% url 'register' %}">Sign Up</a>
+      <a href="{% url 'login' %}">Log In</a>
+      {% else %}
+      <a href="{% url 'logout' %}">Logout</a>
+      {% endif %}
+      <span>{{ request.user.username }}</span>
+
       <a href="{% url 'cart_detail' %}">
        <img style="width: 60px; height: auto;" src="{% static 'carts.png' %}">
 
