--- a/templates/base.html
+++ b/templates/base.html
@@ -37,11 +37,14 @@
        <img style="width: 60px; height: auto;" src="{% static 'carts.png' %}">
 
       </a>
-      <a href="{% url 'create' %}" class="navbar-brand">+</a>
+      {% if request.user.is_superuser%}
+        <a href="{% url 'create' %}" class="navbar-brand">&plus;</a>
+      {% endif %}
 
       <img style="width: 70px; height: auto; margin-left: 360px;" src="{% static 'logo.svg' %}" >
-    <form class="d-flex">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
+    <form action="{% url 'search' %}" method="get" class="d-flex">
+      <input name="q" value="" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
   </div>
