--- a/menu/templates/cart/cart_detail.html
+++ b/menu/templates/cart/cart_detail.html
@@ -30,4 +30,8 @@
 <a href="{% url 'cart_clear' %}">
  <img style="width: 60px; height: auto;" src="{% static 'plastik.jpg' %}">
   </a>
+    <a class="btn btn-danger" href="{% url 'order-create' %}">
+    Place order
+    </a>
+
 {% endblock %}
