--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,14 @@
     body {
     background-color: #f5ebdc;
     }
+    a {
+    text-decoration: none;
+    color: black;
+    }
+    a:hover{
+    color: brown;
+    transition: 0.8s
+    }
 
 </style>
 
@@ -31,7 +39,11 @@
       {% else %}
       <a href="{% url 'logout' %}">Logout</a>
       {% endif %}
-      <span>{{ request.user.username }}</span>
+
+      <a href="{% url 'order-history' %}">
+         <span>{{ request.user.username }}</span>
+      </a>
+
 
       <a href="{% url 'cart_detail' %}">
        <img style="width: 60px; height: auto;" src="{% static 'carts.png' %}">
